[project]
name = "practice-251027"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "langchain-tavily>=0.2.12",
    "langchain[google-genai]>=1.0.3",
]
